--- a/package.json
+++ b/package.json
@@ -12,10 +12,11 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@ai-sdk/anthropic": "^1.2.12",
     "@ai-sdk/openai": "^1.3.22",
     "@clerk/clerk-react": "^5.25.0",
     "@clerk/nextjs": "^6.12.6",
-    "@convex-dev/agent": "^0.1.9",
+    "@modelcontextprotocol/sdk": "^1.13.0",
     "ai": "^4.3.16",
     "autoprefixer": "^10.4.21",
     "clsx": "^2.1.1",
