--- a/package.json
+++ b/package.json
@@ -14,13 +14,13 @@
   "dependencies": {
     "@ai-sdk/anthropic": "^1.2.12",
     "@ai-sdk/openai": "^1.3.22",
-    "@assistant-ui/react": "^0.10.24",
-    "@assistant-ui/react-ai-sdk": "^0.10.14",
-    "@assistant-ui/react-edge": "^0.2.12",
+    "@assistant-ui/react": "^0.11.28",
+    "@assistant-ui/react-ai-sdk": "^1.1.5",
     "@clerk/clerk-react": "^5.25.0",
     "@clerk/nextjs": "^6.12.6",
     "@modelcontextprotocol/sdk": "^1.13.0",
     "ai": "^4.3.16",
+    "assistant-stream": "^0.2.34",
     "autoprefixer": "^10.4.21",
     "clsx": "^2.1.1",
     "convex": "^1.23.0",
