--- a/package.json
+++ b/package.json
@@ -12,14 +12,15 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@ai-sdk/anthropic": "^2.0.8",
-    "@ai-sdk/openai": "^2.0.8",
+    "@ai-sdk/anthropic": "^1.0.8",
+    "@ai-sdk/openai": "^1.0.8",
+    "@ai-sdk/react": "^2.0.60",
     "@assistant-ui/react": "^0.11.28",
     "@assistant-ui/react-ai-sdk": "^1.1.5",
     "@clerk/clerk-react": "^5.25.0",
     "@clerk/nextjs": "^6.12.6",
     "@modelcontextprotocol/sdk": "^1.13.0",
-    "ai": "^5.0.60",
+    "ai": "^4.0.30",
     "assistant-stream": "^0.2.34",
     "autoprefixer": "^10.4.21",
     "clsx": "^2.1.1",
