--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "lucide-react": "^0.522.0",
     "nanoid": "^5.1.6",
     "next": "^15.3.5",
+    "next-themes": "^0.4.6",
     "posthog-js": "^1.275.1",
     "posthog-node": "^5.9.5",
     "react": "^19.0.0",
