--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "validate": "npm run type-check && npm run lint && npm run format:check"
   },
   "dependencies": {
+    "@ai-sdk/anthropic": "^2.0.31",
     "@ai-sdk/openai": "^2.0.52",
     "@ai-sdk/react": "^2.0.60",
     "@clerk/clerk-react": "^5.25.0",
