--- a/.env.example
+++ b/.env.example
@@ -1,20 +1,26 @@
-# Convex Backend Configuration
+# Convex Backend
+# Get these from: https://dashboard.convex.dev
 CONVEX_DEPLOYMENT=dev:your-deployment-name
 NEXT_PUBLIC_CONVEX_URL=https://your-deployment.convex.cloud
 
-# Clerk Authentication
+# Clerk Authentication  
+# Get these from: https://dashboard.clerk.com
 NEXT_PUBLIC_CLERK_PUBLISHABLE_KEY=pk_test_your_publishable_key_here
 CLERK_SECRET_KEY=sk_test_your_secret_key_here
+CLERK_JWT_ISSUER_DOMAIN=your-clerk-jwt-issuer-domain.clerk.accounts.dev
 
-# OpenAI API (for chat and UI generation)
+# OpenAI API (Required)
+# Get from: https://platform.openai.com/api-keys
 OPENAI_API_KEY=sk-proj-your_openai_api_key_here
 
-# Anthropic API (optional - for alternative LLM provider)
+# Anthropic API (Optional - for Claude models)
+# Get from: https://console.anthropic.com/
 ANTHROPIC_API_KEY=sk-ant-api03-your_anthropic_api_key_here
 
-# MCP Server URL (optional - defaults to production)
+# MCP Server (Optional - defaults to production server)
 MCP_URL=https://agent-query-builder-toolbox.vercel.app/mcp
 
-# PostHog Analytics (optional)
-NEXT_PUBLIC_POSTHOG_KEY=your_posthog_key_here
+# PostHog Analytics (Optional)
+# Get from: https://posthog.com
+NEXT_PUBLIC_POSTHOG_KEY=your_posthog_project_key_here
 NEXT_PUBLIC_POSTHOG_HOST=https://eu.i.posthog.com
