--- a/.env.example
+++ b/.env.example
@@ -20,6 +20,13 @@ ANTHROPIC_API_KEY=sk-ant-api03-your_anthropic_api_key_here
 # MCP Server (Optional - defaults to production server)
 MCP_URL=https://agent-query-builder-toolbox.vercel.app/mcp
 
+# GraphQL API Configuration (Required)
+# This is the endpoint used for interactive components (pagination, search)
+# IMPORTANT: Your MCP server must generate queries compatible with this endpoint's schema
+GRAPHQL_API_ENDPOINT=https://your-graphql-api.example.com/graphql
+# Optional: Bearer token for authentication (added as Authorization header)
+GRAPHQL_API_BEARER_TOKEN=your_bearer_token_here
+
 # PostHog Analytics (Optional)
 # Get from: https://posthog.com
 NEXT_PUBLIC_POSTHOG_KEY=your_posthog_project_key_here
