add GLM-4.6 provider

--- a/.env.example
+++ b/.env.example
@@ -17,6 +17,10 @@ OPENAI_API_KEY=sk-proj-your_openai_api_key_here
 # Get from: https://console.anthropic.com/
 ANTHROPIC_API_KEY=sk-ant-api03-your_anthropic_api_key_here
 
+# Zhipu AI API (Optional - for GLM models)
+# Get from: https://open.bigmodel.cn/
+ZHIPU_API_KEY=your_zhipu_api_key_here
+
 # MCP Server (Optional - defaults to production server)
 MCP_URL=https://agent-query-builder-toolbox.vercel.app/mcp
 
